--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -119,8 +119,15 @@
 	<data name="Best Score" xml:space="preserve">
 		<value>Best: {0}</value>
 	</data>
+	<data name="But Only First" xml:space="preserve">
+		<value>But only 1st
+(no cheating)</value>
+	</data>
 	<data name="Copyright" xml:space="preserve">
 		<value>© 2015 Corundum Games</value>
+	</data>
+	<data name="Drag" xml:space="preserve">
+		<value>Drag</value>
 	</data>
 	<data name="High Quality" xml:space="preserve">
 		<value>Best</value>
@@ -129,6 +136,9 @@
 		<value>Touch &amp; drag to launch planet
 
 1 point when a planet revolves around the sun its first time</value>
+	</data>
+	<data name="Launch Another" xml:space="preserve">
+		<value>Keep going</value>
 	</data>
 	<data name="Low Quality" xml:space="preserve">
 		<value>Fastest</value>
@@ -139,13 +149,25 @@
 	<data name="Play" xml:space="preserve">
 		<value>Play</value>
 	</data>
+	<data name="Point for 1st" xml:space="preserve">
+		<value>Point for 1st
+Revolution</value>
+	</data>
 	<data name="Quality" xml:space="preserve">
 		<value>Quality: {0}</value>
+	</data>
+	<data name="Release" xml:space="preserve">
+		<value>Release</value>
 	</data>
 	<data name="Score" xml:space="preserve">
 		<value>{0}</value>
 	</data>
 	<data name="Title" xml:space="preserve">
 		<value>Orbital</value>
+	</data>
+	<data name="Touch" xml:space="preserve">
+		<value>Touch
++
+Drag</value>
 	</data>
 </root>
