--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
@@ -126,6 +126,9 @@
 	<data name="Copyright" xml:space="preserve">
 		<value>Game copyright date</value>
 	</data>
+	<data name="Create Planets" xml:space="preserve">
+		<value>Create planets</value>
+	</data>
 	<data name="Drag" xml:space="preserve">
 		<value>Drag your finger</value>
 	</data>
@@ -164,13 +167,16 @@
 	<data name="Title" xml:space="preserve">
 		<value>Game's name</value>
 	</data>
+	<data name="To Orbit This Star" xml:space="preserve">
+		<value>To orbit this star</value>
+	</data>
 	<data name="Touch" xml:space="preserve">
 		<value>Touch Screen</value>
 	</data>
-	<data name="Create Planets" xml:space="preserve">
-		<value>Create planets</value>
+	<data name="World" xml:space="preserve">
+		<value>World:</value>
 	</data>
-	<data name="To Orbit This Star" xml:space="preserve">
-		<value>To orbit this star</value>
+	<data name="You" xml:space="preserve">
+		<value>You:</value>
 	</data>
 </root>
