--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
@@ -179,4 +179,7 @@
 	<data name="You" xml:space="preserve">
 		<value>You:</value>
 	</data>
+	<data name="Daily" xml:space="preserve">
+		<value>Daily:</value>
+	</data>
 </root>
