--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -123,6 +123,9 @@
 		<value>But only 1st
 (no cheating)</value>
 	</data>
+	<data name="Can't Connect" xml:space="preserve">
+		<value>Can't connect</value>
+	</data>
 	<data name="Copyright" xml:space="preserve">
 		<value>© 2016 Corundum Games</value>
 	</data>
@@ -169,11 +172,17 @@ planet's 1st orbit</value>
 	<data name="Score" xml:space="preserve">
 		<value>{0}</value>
 	</data>
+	<data name="Score Not Found" xml:space="preserve">
+		<value>?</value>
+	</data>
 	<data name="Title" xml:space="preserve">
 		<value>Orbital</value>
 	</data>
 	<data name="To Orbit This Star" xml:space="preserve">
 		<value>to orbit this star</value>
+	</data>
+	<data name="Top Score Pending" xml:space="preserve">
+		<value>...</value>
 	</data>
 	<data name="Touch" xml:space="preserve">
 		<value>Touch
